# apartment_comparison

./: .gitignore  README.md  TESTING.ipynb  addresses.csv  apartment_comparison.csv  apartments.db  pyproject.toml  wsgi.py
apartment_comparison/: __init__.py  db_manager.py  helpers.py  routes.py
apartment_comparison/static/css/: styling.css  styling.css.map  styling.scss
apartment_comparison/static/sql/: create_table.sql
apartment_comparison/templates/: index.html  manage.html
