[tool.poetry]
name = "apartment_comparison"
version = "0.1.0"
description = ""
authors = ["Chris Birch <datapointchris@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
