[tool.poetry]
name = "apartment_comparison"
version = "0.1.0"
description = ""
authors = ["Chris Birch <datapointchris@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
jupyter = "^1.0.0"
ipykernel = "^6.7.0"
pandas = "^1.4.0"

[tool.poetry.dev-dependencies]
livereload = "^2.6.3"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
